2006-08-24 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/GParted_Core.h,
	  src/GParted_Core.cc: improvements to probe and copy stuff.

2006-08-24 Bart Hakvoort <hakvoort@cvs.gnome.org>
	
	* src/GParted_Core.cc: use Glib::timer instead of std::time stuff for
	  the probing, this is more accurate since the resolution is much
	  higher (microseconds instead of seconds)

2006-08-24 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/OperationDetail.cc: catch markup exceptions
	* src/Utils.cc: cleanups 

2006-08-21 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Utils.h,
	  src/Utils.cc: added format_time()
	* include/OperationDetail.h,
	  src/OperationDetail.cc: keep track of elapsed time between
	  STATUS_EXECUTE and STATUS_[ERROR|SUCCES]
	* include/Dialog_Progress.h,
	  src/Dialog_Progress.cc: show elapsed time in the details per (sub)
	  process
	* src/GParted_Core.cc: use Utils::format_time() 

2006-08-21 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/FileSystem.cc: added nice -n 19, so that all extensive
	  filesystemoperations will be 'nice' :)
	* src/OperationDetail.cc,
	  src/Utils.cc: cleanups 

2006-08-20 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/Dialog_Progress.cc: enabled set_do_overwrite_confirmation() for
	  the detailsfile. 
	* configure.in: raised gtkmm dependency from 2.6 to 2.8

2006-08-20 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Win_GParted.h,
	  src/Win_GParted.cc: replaced hardcoded menu and toolbar indices with
	  variables. This is far more flexible and reliable.

2006-08-20 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/GParted_Core.h,
	  src/GParted_Core.cc: fixed some issues with combi move+shrink on
	  fat* and hfs* filesystems. 
	  Also call wait_for_node() from commit() if 'node' was provided.

2006-08-20 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/Dialog_Partition_Resize_Move.cc: due to some restrictions it was
	  no longer possible to shrink swap filesystems. fixed.
