@@ -1,4 +1,12 @@
-2006-08-24 Bart Hakvoort <hakvoort@cvs.gnome.org>
+2006-08-27 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* happy 24th birthday Johannes! :^)
+	* include/GParted_Core.h,
+	  src/GParted_Core.cc: restructured resize_move() to be more robust.
+	  This will hopefully tackle a couple of issues which came up during
+	  the public testing.
+
+2006-08-25 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* include/GParted_Core.h,
 	  src/GParted_Core.cc: improvements to probe and copy stuff.
